--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-./config
 
 # Android/IntelliJ
 #
@@ -58,3 +57,6 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+#config
+config
