--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@turf/helpers": "^6.3.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-geocoding": "^0.5.0",
-    "react-native-geolocation-service": "^5.3.0-beta.1"
+    "react-native-geocoding": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
